Refactor action repository
Signed-off-by: Avgustin Marinov <Avgustin.Marinov@bosch.com>